# apexfit

./: .gitignore  ApexFit_Watch_PRD.md  ApexFit_iPhone_PRD.md  project.yml
ApexFit/: ApexFit 2.entitlements  ApexFitApp.swift  Info.plist  project.yml
ApexFit.xcodeproj/: project.pbxproj
ApexFitWatch/: ApexFitWatchApp.swift
ApexFitWatchComplications/: ApexFitComplicationProvider.swift  ComplicationEntry.swift
Engines/: BaselineEngine.swift  HRVCalculator.swift  LongevityEngine.swift  SleepPlannerEngine.swift  StrainEngine.swift
Models/: DailyMetric.swift  HealthKitAnchor.swift  JournalEntry.swift  SleepSession.swift  SleepStage.swift
Services/: HealthMonitorService.swift  MetricComputationService.swift  StressService.swift  WorkoutManager.swift
Universal Remote/: CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: dashboard.py  metrics.py  recovery.py  strain.py  users.py  workouts.py
backend/app/core/: cloud_tasks.py  exceptions.py
backend/app/db/repositories/: coach_repo.py
backend/app/engines/: longevity_engine.py
backend/app/models/: __init__.py  coach.py  daily_metric.py  journal.py  notification.py  sleep.py  user.py  workout.py
backend/app/schemas/: coach.py  dashboard.py  metrics.py  sleep.py  stress.py  team.py  workout.py
backend/app/services/: coach_service.py  healthspan_service.py
backend/tests/: conftest.py  test_metrics.py  test_teams.py
backend/tests/test_engines/: test_longevity_engine.py
(+475 files in other folders)
